tests/paczka1/small_fuzzy/94128135.err
Error in line 14: X2QyoBbmSLn S711 76,4
